Remove window_visible_ DCHECK on BridgedNativeWidget

Hiding the Layer can also trigger a paint request.
This causes the following omnibox interactive_ui_tests to fail with material refresh:
OmniboxViewTest.PreserveDisplayTextOnFocusSearch
OmniboxApiTest.ExtensionSuggestionsOnlyInKeywordMode
OmniboxViewTest.Paste
OmniboxViewTest.BackspaceInKeywordMode
OmniboxViewTest.UndoRedo

* thread #1, name = 'CrBrowserMain', queue = 'com.apple.main-thread'
  * frame #0: libcc.dylib`cc::SchedulerStateMachine::SetNeedsBeginMainFrame(this) at scheduler_state_machine.cc:1279
    frame #1: libcc.dylib`cc::Scheduler::SetNeedsBeginMainFrame(this) at scheduler.cc:116
    frame #2: libcc.dylib`cc::SingleThreadProxy::SetNeedsCommit(this) at single_thread_proxy.cc:244
    frame #3: libcc.dylib`cc::LayerTreeHost::SetNeedsCommit(this) at layer_tree_host.cc:536
    frame #4: libcc.dylib`cc::Layer::SetNeedsCommit(this) at layer.cc:166
    frame #5: libcc.dylib`cc::Layer::SetHideLayerAndSubtree(this, hide=true) at layer.cc:1085
    frame #6: libcompositor.dylib`ui::Layer::SetVisibilityFromAnimation(this, visible=false, reason=NOT_FROM_ANIMATION) at layer.cc:1164
    frame #7: libcompositor.dylib`ui::LayerAnimator::SetVisibility(this, value=false) at layer_animator.cc:115
    frame #8: libcompositor.dylib`ui::Layer::SetVisible(this, visible=false) at layer.cc:537
    frame #9: libviews.dylib`views::BridgedNativeWidget::OnVisibilityChanged(this) at bridged_native_widget.mm:796
(lldb) frame select 9
(lldb) print this->window_visible_
(bool) $0 = false

BUG=858864

Change-Id: I07014b36e289ecc942e25a2e789517ef76fd5a1b
Reviewed-on: https://chromium-review.googlesource.com/1121324
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572204}
Former-commit-id: a6dcc165e0701e3dd1799cb53fb785360e1f2564